--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     working_dir: /app
     volumes:
       - ./worker:/app
+      - /var/run/docker.sock:/var/run/docker.sock
     command: celery -A celery_app worker --loglevel=info
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
@@ -33,6 +34,8 @@ services:
     depends_on:
       - db
       - rabbitmq
+      - katana
+    privileged: true
 
   db:
     image: postgres:15
