--- a/viteTailMui/dockerfile
+++ b/viteTailMui/dockerfile
@@ -1,5 +1,6 @@
-# Resmi Node.js imajını kullan
-FROM node:22
+# Multi-stage build
+# Stage 1: Build the application
+FROM node:22 AS builder
 
 # Çalışma dizinini ayarla
 WORKDIR /app
@@ -11,5 +12,24 @@ RUN npm install
 # Tüm dosyaları kopyala
 COPY . .
 
-# Vite'i başlat
-CMD ["npm", "run", "dev"]
+# Production build oluştur
+RUN npm run build
+
+# Stage 2: Nginx ile serve et
+FROM nginx:alpine
+
+# Build edilmiş dosyaları nginx'e kopyala
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Nginx konfigürasyonu kopyala
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# 80 portunu expose et
+EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost/ || exit 1
+
+# Nginx'i başlat
+CMD ["nginx", "-g", "daemon off;"]
